2008-01-01  Akim Demaille  <demaille@gostai.com>

	Catch up with children.as.
	* src/liburbi/tests/liburbi-check.as: here.

2008-01-01  Akim Demaille  <demaille@gostai.com>

	Improve CLI.
	* src/liburbi/uobject.cc: Fix the CLI.

2007-12-21  Matthieu Nottale  <nottale@gostai.com>

	Declare vars in generated code.
	* src/liburbi/uobject.cc: Here when function return value is sent.
	* src/liburbi/uvar.cc: Here when the urbi::UVar is created.

2007-12-21  Matthieu Nottale  <nottale@gostai.com>

	Adapt tests for new server/buildaux conventions.
	* src/liburbi/tests/liburbi-check.as: 
	   - Start server with --period <period>.
	   - Redirect fd 3 to stderr. 

2007-12-18  Akim Demaille  <akim.demaille@free.fr>

	src/liburbi/tests.
	* Makefile.am, configure.ac, src/liburbi/Makefile.am: Adjust.
	* tests: Move to...
	* src/liburbi/tests: here.

2007-12-13  Akim Demaille  <akim.demaille@free.fr>

	Remove useless declaration.
	* src/liburbi/umain.cc: urbi::main is declared in uobject.hh, which
	is included.

2007-12-11  Akim Demaille  <demaille@gostai.com>

	Use m4sh.
	* tests/liburbi-check.as (find_srcdir): Remove, provided by m4sh.
	and useless :)

2007-12-11  Akim Demaille  <demaille@gostai.com>

	Use m4sh.
	* tests/liburbi-check.as (find_urbi_server): Remove.

2007-12-05  Guillaume Deslandes  <deslandes@gostai.com>

	Exit on -v or --version.
	* src/liburbi/uobject.cc: Here.

2007-12-04  Guillaume Deslandes  <deslandes@gostai.com>

	Rename urbi::liburbi_package_info into urbi::package_info.
	So it can be used the same way in engines and remotes.
	* src/liburbi/package-info.cc,
	* src/liburbi/uobject.cc,
	* src/liburbi/uobject/urbi/uobject.hh: Here.

2007-12-03  Guillaume Deslandes  <deslandes@gostai.com>

	Add const version for UNotify* and  USetTimer.
	Put everything in macros to prevent code duplication.
	* src/liburbi/uobject/urbi/ucallbacks.hh.template,
	* src/liburbi/uobject/urbi/uobject.hh: Here.

2007-12-03  Matthieu Nottale  <nottale@gostai.com>
